update readme with screen shot